style.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
  }
  
  h1 {
    margin-top: 0;
  }
  
  #button-container,
  #results {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
    gap: 10px;
  }
  
  #game-status {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
    width: 100%;
  }
  
  #results {
    width: 100%;
    text-align: center;
  }
  
  #playAgainButton {
    margin-top: 10px;
  }
  

